[package]
name = "h2k"
version = "0.1.0"
edition = "2021"
authors = ["Fawad Shaikh <fawad@candle.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
